--- a/webroot/blue/css/style.css
+++ b/webroot/blue/css/style.css
@@ -648,8 +648,8 @@ header form input, header form button{
 }
 
 .items .item{
-    min-height: 280px;
-    max-height: 300px;
+    /*min-height: 280px;
+    max-height: 300px;*/
     max-width: 250px;
     margin: 10px auto;
     padding: 10px 10px;
